Normally final push from me

--- a/test_quarto.qmd
+++ b/test_quarto.qmd
@@ -57,9 +57,7 @@ In 2018, There was one game between Media Black Team and Media White Team, which
 
 Il faut montrer les dataframe finaux ou en parler
 
-Having a strong background in basketball, we also made a deliberate choice to place a special emphasis on fouls statistics. Notably, if a team accumulates a certain number of fouls within a specific time period, all subsequent fouls result in two free throws for the opponent. This rule introduces strategic possibilities, such as intentionally fouling the opponent towards the end of the game to compel them to attempt two free throws, and then attempting a three-pointer to gain a one-point advantage. To accommodate this, we created two distinct dataframes resembling **team_stats_df** with a slight distinction: one focused on the initial 36 minutes of the game and the other on the final 4 minutes. This division is predicated on the likelihood of teams committing more fouls in the closing moments of the game.
-# Exploratory data analysis 
-Spotting mistakes and missing data (could be part of EDA too) Listing anomalies and outliers (could be part of EDA too) Mapping out the underlying structure Identifying the most important variables Univariate visualizations Multivariate visualizations Summary tables
+Having a strong background in basketball, we also made a deliberate choice to place a special emphasis on fouls statistics. Notably, if a team accumulates a certain number of fouls within a specific time period, all subsequent fouls result in two free throws for the opponent. This rule introduces strategic possibilities, such as intentionally fouling the opponent towards the end of the game to compel them to attempt two free throws, and then attempting a three-pointer to gain a one-point advantage. To accommodate this, we created two distinct dataframes resembling **team_stats_df** with a slight distinction: one focused on the initial 36 minutes of the game and the other on the final 4 minutes. This division is predicated on the likelihood of teams committing more fouls in the closing moments of the game. \# Exploratory data analysis Spotting mistakes and missing data (could be part of EDA too) Listing anomalies and outliers (could be part of EDA too) Mapping out the underlying structure Identifying the most important variables Univariate visualizations Multivariate visualizations Summary tables
 
 After creating various data frames for different types of analysis we wanted to conduct, we plotted various graphs to observe if there was a trend over the years for different statistical measures. Prior to commencing the project, we were aware that the players in the NBA started to attempt more and more three-point shots each year, so we initially examined how did the three-point statistics evolve over the years in the euroleague.
 
@@ -186,12 +184,12 @@ print(Effect_2_made_on_Win)
 
 The initial regression result left much to be desired, as it merely suggested that making more shots increases a team's chances of winning, which is a fairly obvious observation. Additionally, the steeper slope for the probability of winning based on three-pointers made compared to two-pointers made is expected, given that three points are worth more than two. While this result didn't provide a clear explanation for the increasing interest in shooting beyond the three-point line, it was still surprising and prompted further investigation.
 
-We recognized that numerous factors could influence both the number of three-pointers made and the probability of winning, leading to potential correlations that could introduce bias. Leveraging our personal knowledge of basketball and our familiarity with the NBA, we decided to explore two distinct effects: the changing landscape of basketball post-2016 and the possibility that teams, especially when trailing, might attempt to shoot more three-pointers as a desperate maneuver to gain an advantage.
-### The basket ball after the 2015-2016 NBA season 
+We recognized that numerous factors could influence both the number of three-pointers made and the probability of winning, leading to potential correlations that could introduce bias. Leveraging our personal knowledge of basketball and our familiarity with the NBA, we decided to explore two distinct effects: the changing landscape of basketball post-2016 and the possibility that teams, especially when trailing, might attempt to shoot more three-pointers as a desperate maneuver to gain an advantage. \### The basket ball after the 2015-2016 NBA season
 
 A question that arose was: why would there be a growing interest in three-pointers if it seemingly doesn't translate to a higher chance of winning? One plausible explanation could be that sports analysts identified a correlation in the data available at that time, which may no longer hold true. To gain a better understanding, we decided to split the data before 2016 from the rest of the data.
 
 As depicted in a previous plot, teams began significantly increasing their three-point attempts around 2012, and by 2016, this strategy had become well-established. We chose 2016 as the dividing point because of the remarkable performance by Stephen Curry in the NBA. During the 2015-2016 season, the Golden State Warriors, led by Stephen Curry and Klay Thompson, shattered the record for the most games won in an NBA season. This team and these players are renowned for their emphasis on attempting and making more three-pointers than others, symbolizing the dominance of the three-point strategy. However, it's essential to recognize that we are not aware of a similar symbol of dominance in the Euroleague. It's important to note that this separation is not perfect, as the trend of increasing three-point attempts started before 2016 and continued afterward.
+
 ```{r}
 #| echo: false
 print(Effect_3Attempts_on_Win)
@@ -205,6 +203,7 @@ Conversely, the data revealed that shooting more two-pointers was associated wit
 ### Separating the last four minutes from the rest of the game
 
 Another significant factor to consider is this: when a team is trailing by a substantial margin towards the end of the game, they often attempt more three-pointers in an effort to stage a comeback and regain an advantage. Quantifying the exact level of desperation in a team is challenging, so we made a deliberate decision to isolate the last four minutes of the game for analysis. This choice is entirely arbitrary, but it addresses a challenge that had an impact on our initial regression analysis.
+
 ```{r}
 #| echo: false
 print(Effect_3Attempts_on_Win_first37)
@@ -213,8 +212,7 @@ print(Effect_3Attempts_on_Win_last_4)
 
 These plots provided us with a deeper understanding of the situation. When a team opts to shoot more three-pointers without being in a desperate situation, their probability of winning naturally increases. However, this effect exhibited a slowdown over time, especially from 2016 onwards, coinciding with the growing trend of players taking more three-pointers.
 
-It's important to note that many teams attempting a significant number of three-pointers were, in reality, in a desperate situation and were shooting threes in the last four minutes to try to narrow the point gap between them and their opponents. The final graph does not suggest that attempting three-pointers at the end of the game is an unwise strategy. Instead, it indicates that teams trailing four minutes before the end of the game tend to shoot more three-pointers, and the larger the point gap, the more inclined they are to attempt three-pointers.
-## Fouls' strategy: A deep dive into the most well known strategy
+It's important to note that many teams attempting a significant number of three-pointers were, in reality, in a desperate situation and were shooting threes in the last four minutes to try to narrow the point gap between them and their opponents. The final graph does not suggest that attempting three-pointers at the end of the game is an unwise strategy. Instead, it indicates that teams trailing four minutes before the end of the game tend to shoot more three-pointers, and the larger the point gap, the more inclined they are to attempt three-pointers. \## Fouls' strategy: A deep dive into the most well known strategy
 
 Fouls play a substantial role in the game of basketball. Generally, committing numerous fouls is considered a poor strategy. However, there are instances where fouling can be employed as a winning strategy. A well-known tactic, often referred to as "hack-a-player" or "hack-a-Shaq," named after Shaquille O'Neal, who was one of the initial targets of this strategy, has proven effective. The strategy is straightforward: in the final minutes of a game, players from the losing team intentionally foul the weakest free-throw shooter on the winning team. If the fouled player has already accumulated more than four fouls in the quarter, they receive two free-throw attempts, which they often struggle to convert. After these attempts, the losing team can attempt a three-pointer. If successful, this can result in a one-point or even a three-point advantage for the losing team. However, analyzing the effectiveness of this strategy is not straightforward. Using the simple probability of winning is insufficient, as the team employing this tactic is typically already losing. Moreover, data must be filtered to include only games with a point difference of fewer than 10 points in the last four minutes, as games with a greater difference tend to have distinct dynamics once the outcome is largely decided. After accounting for these considerations, we attempted to visualize the impact of this strategy.
 
@@ -223,14 +221,13 @@ print(Effect_Foul_on_Gap_last_4_not_Desperate)
 print(Effect_Three_accuracy_on_Gap_last_4_not_Desperate)
 ```
 
-What can be deduced from these graphs is that committing more than three fouls in the final few minutes typically aids the opposing team in solidifying its lead. Moreover, the team that is trailing must exhibit a high level of shooting accuracy during the last four minutes to gain an advantage. Moreover, in tightly contested games with a small point difference four minutes before the end, excessive fouling can sometimes be unnecessary. Teams may choose not to foul much, or at all, in such situations where every possession becomes critical, and fouling may not provide a significant advantage. Thus, it would be an oversimplification to conclude that fouling is universally inferior to not fouling. Additionally, it's important to note the significant presence of extreme values in the data. This underscores that this strategy can genuinely swing a game either in favor or against the team employing it, making it a high-risk, high-reward tactic.
-
+What can be deduced from these graphs is that committing more than three fouls in the final few minutes typically aids the opposing team in solidifying its lead. Moreover, the team that is trailing must exhibit a high level of shooting accuracy during the last four minutes to gain an advantage. Furthermore, in tightly contested games with a small point difference four minutes before the end, excessive fouling can sometimes be unnecessary. Teams may choose not to foul much, or at all, in such situations where every possession becomes critical, and fouling may not provide a significant advantage. Thus, it would be an oversimplification to conclude that fouling is universally inferior to not fouling. Additionally, it's important to note the significant presence of extreme values in the data. This underscores that this strategy can genuinely swing a game either in favor or against the team employing it, making it a high-risk, high-reward tactic.
 
 # Conclusion
 
-Take home message Limitations Future work?
-
 This project has effectively reinforced the notion that three-point shooting significantly contributed to winning games from 2007 to 2020. However, it is essential to acknowledge the project's limitations. Various external factors may be correlated with our variables and potentially influence game outcomes, introducing the potential for misleading results, as exemplified by our initial attempt to analyze the impact of the number of three-pointers.
+
+Excessive fouling can sometimes be unnecessary. This underscores that this strategy can genuinely swing a game either in favor or against the team employing it, making it a high-risk, high-reward tactic.
 
 The dataset presented its own set of challenges, marked by inconsistencies, especially concerning the distinction between two-pointers, layups, and dunks. Additionally, the dataset's endpoint in 2020 restricts our analysis to a specific time frame. This project also prioritized the exploration of basketball statistics over in-depth statistical explanations, aligning with the course's primary objectives.
 
