--- a/test_quarto.qmd
+++ b/test_quarto.qmd
@@ -9,8 +9,6 @@ output: html_document
 
 # Introduction
 
-Overview and Motivation Related Work Research questions
-
 We live in a world where the use of statistics and data analysis is of paramount importance to gain a comprehensive understanding of various subjects, allowing individuals to grasp the broader picture of what is happening around them. In the realm of sports, this emphasis on statistics is no exception. In contemporary sports, statistics play a pivotal role in ranking players and determining their relative skills and performance. Furthermore, teams increasingly rely on statistics to gain insights into the strategies employed by opposing teams, enabling them to develop effective counter-strategies for a higher chance of victory.Notably, the impact of data-driven decision-making in sports is exemplified by "Moneyball," a book and film that brought to light how advanced statistical analysis revolutionized player recruitment and team strategies in baseball.
 
 Beyond the competitive aspect, statistics and data analysis are crucial in sports to track how the game evolves over time. This data-driven approach aids in adapting to changing trends and styles in the sport, as well as in refining player training and development to align with the modern game.
@@ -25,12 +23,9 @@ While our primary focus was on data analysis and exploration, we did not conduct
 #| echo: false
 #| include: false 
 source("Main_Wrangle.R")
-source("first_graphs.R")
 ```
 
 # Data
-
-Sources Description Wrangling/cleaning Spotting mistakes and missing data (could be part of EDA too) Listing anomalies and outliers (could be part of EDA too)
 
 We selected our dataset from Kaggle, a prominent data science competition platform renowned for hosting a wide array of datasets.
 
@@ -57,22 +52,22 @@ In 2018, There was one game between Media Black Team and Media White Team, which
 
 Il faut montrer les dataframe finaux ou en parler
 
-Having a strong background in basketball, we also made a deliberate choice to place a special emphasis on fouls statistics. Notably, if a team accumulates a certain number of fouls within a specific time period, all subsequent fouls result in two free throws for the opponent. This rule introduces strategic possibilities, such as intentionally fouling the opponent towards the end of the game to compel them to attempt two free throws, and then attempting a three-pointer to gain a one-point advantage. To accommodate this, we created two distinct dataframes resembling **team_stats_df** with a slight distinction: one focused on the initial 36 minutes of the game and the other on the final 4 minutes. This division is predicated on the likelihood of teams committing more fouls in the closing moments of the game. \# Exploratory data analysis Spotting mistakes and missing data (could be part of EDA too) Listing anomalies and outliers (could be part of EDA too) Mapping out the underlying structure Identifying the most important variables Univariate visualizations Multivariate visualizations Summary tables
+Having a strong background in basketball, we also made a deliberate choice to place a special emphasis on fouls statistics. Notably, if a team accumulates a certain number of fouls within a specific time period, all subsequent fouls result in two free throws for the opponent. This rule introduces strategic possibilities, such as intentionally fouling the opponent towards the end of the game to compel them to attempt two free throws, and then attempting a three-pointer to gain a one-point advantage. To accommodate this, we created two distinct dataframes resembling **team_stats_df** with a slight distinction: one focused on the initial 36 minutes of the game and the other on the final 4 minutes. This division is predicated on the likelihood of teams committing more fouls in the closing moments of the game.
 
-After creating various data frames for different types of analysis we wanted to conduct, we plotted various graphs to observe if there was a trend over the years for different statistical measures. Prior to commencing the project, we were aware that the players in the NBA started to attempt more and more three-point shots each year, so we initially examined how did the three-point statistics evolve over the years in the euroleague.
+# Exploratory data analysis
 
-1er GRAPH EVOLUTION DES 3 POINTS A TRAVERS LES ANNEES (three pointer MADE)
+After creating various data frames for different types of analysis we wanted to conduct, we plotted various graphs to observe if there was a trend over the years for different statistical measures. Prior to commencing the project, we were aware that the players in the NBA started to attempt more and more three-point shots each year, so we initially examined how did the three-point statistics evolve over the years in the Euroleague.
 
 ```{r}
 #| echo: false
-print(plot_threeS_over_years)
+plot_threeS_over_years
 ```
 
-Indeed, as anticipated, we observed a consistent upward trend in the average number of three-pointers made per season over the years. However, the players did not start to get that much more accurate behind the three-point line. The players make more three-pointers, almost solely because they just shoot more three-pointers, which came as a shocking surprise. With this in mind, we aimed to gain an initial visual insight into whether the trend of teams making more three-pointers over the years has any influence on their win percentage. To do this, we created graphs showcasing the top three teams with the highest win percentages each season, in order to determine if these teams also happen to be the ones making the most three-pointers. 2eme graph les 3 EQUIPE AVEC LE MEILLEURE WIN PERCENTAGE.
+Indeed, as anticipated, we observed a consistent upward trend in the average number of three-pointers made per season over the years. However, the players did not start to get that much more accurate behind the three-point line. The players make more three-pointers, almost solely because they just shoot more three-pointers, which came as a shocking surprise. With this in mind, we aimed to gain an initial visual insight into whether the trend of teams making more three-pointers over the years has any influence on their win percentage. To do this, we created graphs showcasing the top three teams with the highest win percentages each season, in order to determine if these teams also happen to be the ones making the most three-pointers.
 
 ```{r}
 #| echo: false
-print(top_winners)
+top_winners
 ```
 
 And we can see specially in the recent years that the teams that have the best win percentage if we compare with the plot above they often happen to be the ones with the highest three pointer made. prompting us to delve further into its analysis in the subsequent section.
@@ -81,34 +76,30 @@ We employed a similar methodology to analyze various statistical aspects. Howeve
 
 ```{r}
 #| echo: false
-print(plot_defreb_over_years)
+plot_defreb_over_years
 ```
 
 In light of these factors, we consciously made the decision to center our primary focus on the analysis of statistical trends concerning both three-pointers and two-pointers.
 
-Remarkably, our analysis also uncovered an important pattern in the last 4 minutes of the game. It revealed that as the point difference increased, indicating a less closely contested game, teams tended to commit fewer fouls.
-
-GRAPH DES FAUTES DANS LES 4 DERNIERE MINUTES PAR DIFF DE POINTS AVEC SEULEMENT LES POINTS NOIR PAS CELUI AVEC LES POINTS ROUGE AUSSI.
+Our analysis also uncovered an important pattern in the last 4 minutes of the game. It revealed that as the point difference increased, indicating a less closely contested game, teams tended to commit fewer fouls.
 
 ```{r}
 #| echo: false
-print(p1)
+p1
 ```
 
-After making this observation, we recognized the need to filter our data to distinguish between closely contested and less closely contested games. To define a closely contested game, we established an arbitrary threshold: a game is categorized as tight if, when entering the last 4 minutes, the absolute point difference is less than 15 points.
-
-GRAPH AVEC LES 3 BARRES QUI MONTRE LE NOMBRE DE FAUTES DANS 3 CAS DIFFERENT
+After making this observation, we recognized the need to filter our data to distinguish between closely contested and less closely contested games. To define a closely contested game, we established an arbitrary threshold: a game is categorized as tight if, when entering the last 4 minutes, the absolute point difference is less than 10 points.
 
 ```{r}
 #| echo: false
-print(p2) #code with lightcoral color
+p2 #code with lightcoral color
 ```
 
-Our analysis revealed an expected trend: in tightly contested games, there is a relatively higher frequency of fouls, and on average, these fouls are more often committed by the losing team rather than the winning team. GRAPH QUI MONTRE LES FAUTES COMISE DANS LES 4 DERNIERE MINUTE PAR GAGNANT ET PERDANT.
+Our analysis revealed an expected trend: in tightly contested games, there is a relatively higher frequency of fouls, and on average, these fouls are more often committed by the losing team rather than the winning team.
 
 ```{r}
 #| echo: false
-print(plot_mean_foul)
+plot_mean_foul
 ```
 
 In the upcoming Analysis section, we will delve deeper into the strategy employed by losing teams, involving an increased frequency of fouls during the last 4 minutes, and its impact on the game's outcome.
@@ -171,18 +162,17 @@ As previously mentioned, team_stats_df is a data frame that encompasses the stat
 
 ```{r}
 #| echo: false
-print(Effect_3Attempts_on_Win_no_distinction)
+Effect_3Attempts_on_Win_no_distinction
 ```
 
 According to this regression analysis, the probability of winning appears to be independent of the number of three-point attempts. The results suggest that increasing the number of three-pointers taken doesn't have a significant impact on the likelihood of winning. Instead, the key factor seems to be the ability to make those shots, whether they are two-pointers or three-pointers.
 
 ```{r}
 #| echo: false
-print(Effect_3_made_on_Win_distinction)
-print(Effect_2_made_on_Win)
+Effect_3_made_on_Win_distinction|Effect_2_made_on_Win
 ```
 
-The initial regression result left much to be desired, as it merely suggested that making more shots increases a team's chances of winning, which is a fairly obvious observation. Additionally, the steeper slope for the probability of winning based on three-pointers made compared to two-pointers made is expected, given that three points are worth more than two. While this result didn't provide a clear explanation for the increasing interest in shooting beyond the three-point line, it was still surprising and prompted further investigation.
+A three-pointer has less impact on the team's ability to win than it used to. Additionally, the steeper slope for the probability of winning based on three-pointers made compared to two-pointers made is expected, given that three points are worth more than two. While our naive regression didn't provide a clear explanation for the increasing interest in shooting beyond the three-point line, it was still surprising and prompted further investigation.
 
 We recognized that numerous factors could influence both the number of three-pointers made and the probability of winning, leading to potential correlations that could introduce bias. Leveraging our personal knowledge of basketball and our familiarity with the NBA, we decided to explore two distinct effects: the changing landscape of basketball post-2016 and the possibility that teams, especially when trailing, might attempt to shoot more three-pointers as a desperate maneuver to gain an advantage. \### The basket ball after the 2015-2016 NBA season
 
@@ -192,8 +182,7 @@ As depicted in a previous plot, teams began significantly increasing their three
 
 ```{r}
 #| echo: false
-print(Effect_3Attempts_on_Win)
-print(Effect_2Attempts_on_Win)
+Effect_3Attempts_on_Win|Effect_2Attempts_on_Win
 ```
 
 These results offer valuable insights into the dynamics at play. Before 2016, sports analysts identified a trend in their dataset, prompting an increasing number of teams to adopt a strategy of attempting more three-pointers. Paradoxically, this surge in three-point attempts eventually led to it being perceived as a less effective strategy. The analysts may not have fully considered that teams attempting more three-pointers were likely those more proficient at it, hence their higher win rates.
@@ -206,8 +195,8 @@ Another significant factor to consider is this: when a team is trailing by a sub
 
 ```{r}
 #| echo: false
-print(Effect_3Attempts_on_Win_first37)
-print(Effect_3Attempts_on_Win_last_4)
+Effect_3Attempts_on_Win_first37
+Effect_3Attempts_on_Win_last_4
 ```
 
 These plots provided us with a deeper understanding of the situation. When a team opts to shoot more three-pointers without being in a desperate situation, their probability of winning naturally increases. However, this effect exhibited a slowdown over time, especially from 2016 onwards, coinciding with the growing trend of players taking more three-pointers.
@@ -217,18 +206,19 @@ It's important to note that many teams attempting a significant number of three-
 Fouls play a substantial role in the game of basketball. Generally, committing numerous fouls is considered a poor strategy. However, there are instances where fouling can be employed as a winning strategy. A well-known tactic, often referred to as "hack-a-player" or "hack-a-Shaq," named after Shaquille O'Neal, who was one of the initial targets of this strategy, has proven effective. The strategy is straightforward: in the final minutes of a game, players from the losing team intentionally foul the weakest free-throw shooter on the winning team. If the fouled player has already accumulated more than four fouls in the quarter, they receive two free-throw attempts, which they often struggle to convert. After these attempts, the losing team can attempt a three-pointer. If successful, this can result in a one-point or even a three-point advantage for the losing team. However, analyzing the effectiveness of this strategy is not straightforward. Using the simple probability of winning is insufficient, as the team employing this tactic is typically already losing. Moreover, data must be filtered to include only games with a point difference of fewer than 10 points in the last four minutes, as games with a greater difference tend to have distinct dynamics once the outcome is largely decided. After accounting for these considerations, we attempted to visualize the impact of this strategy.
 
 ```{r}
-print(Effect_Foul_on_Gap_last_4_not_Desperate)
-print(Effect_Three_accuracy_on_Gap_last_4_not_Desperate)
+Effect_Foul_on_Gap_last_4_not_Desperate|Effect_Three_accuracy_on_Gap_last_4_not_Desperate
 ```
 
-What can be deduced from these graphs is that committing more than three fouls in the final few minutes typically aids the opposing team in solidifying its lead. Moreover, the team that is trailing must exhibit a high level of shooting accuracy during the last four minutes to gain an advantage. Furthermore, in tightly contested games with a small point difference four minutes before the end, excessive fouling can sometimes be unnecessary. Teams may choose not to foul much, or at all, in such situations where every possession becomes critical, and fouling may not provide a significant advantage. Thus, it would be an oversimplification to conclude that fouling is universally inferior to not fouling. Additionally, it's important to note the significant presence of extreme values in the data. This underscores that this strategy can genuinely swing a game either in favor or against the team employing it, making it a high-risk, high-reward tactic.
+What can be deduced from these graphs is that committing fouls in the final few minutes typically aids the opposing team in solidifying its lead. Moreover, the team that is trailing must exhibit a high level of shooting accuracy during the last four minutes to gain an advantage. Teams may choose not to foul much, or at all, if there is any other chance to win the game. It's important to note the significant presence of extreme values in the data. This underscores that this strategy can genuinely swing a game either in favor or against the team employing it. An analogy with the roulette could be made. Statistically, while playing the roulette, the best amount to gamble is 0, but if someone has to gamble, he should gamble everything on only one spin, in order to maximize his chances to win. Here, it is the same. A team should not use hack-a-player, except if there is no other chance and they foul the opponents only once or twice, to gain an advantage of one to three points if they are lucky to make their three-point attempt afterwards.
 
 # Conclusion
 
-This project has effectively reinforced the notion that three-point shooting significantly contributed to winning games from 2007 to 2020. However, it is essential to acknowledge the project's limitations. Various external factors may be correlated with our variables and potentially influence game outcomes, introducing the potential for misleading results, as exemplified by our initial attempt to analyze the impact of the number of three-pointers.
+This project has effectively reinforced the notion that three-point shooting significantly contributed to winning games from 2007 to 2020. However, it is essential to acknowledge the project's limitations. Various external factors may be correlated with our variables and potentially influence game outcomes, introducing the potential for misleading results, as exemplified by our initial attempt to analyze the impact of the number of three-pointers. Our project is available on a public [Github repository](https://github.com/Lirimerie/euroleague-evolution) and the ReadMe file would help someone to understand how the scripts work together
 
-Excessive fouling can sometimes be unnecessary. This underscores that this strategy can genuinely swing a game either in favor or against the team employing it, making it a high-risk, high-reward tactic.
+Excessive fouling should not help a losing team win on average. This strategy works mostly when a team needs to only make one or two fouls and to make the three-pointer afterwards.
 
 The dataset presented its own set of challenges, marked by inconsistencies, especially concerning the distinction between two-pointers, layups, and dunks. Additionally, the dataset's endpoint in 2020 restricts our analysis to a specific time frame. This project also prioritized the exploration of basketball statistics over in-depth statistical explanations, aligning with the course's primary objectives.
 
-The use of Generalized Additive Models (GAM) could enhance the project's analytical capabilities by allowing for the inclusion of additional variables and functionalizing specific aspects. The code could also be functionalized a little bit more. We encountered difficulties as we had trouble creating loops for generating plots. Future work could explore player statistics and try to find what makes a player important for the team. Future work could use the available unused variables and create new ones. Additionally, individuals with a deeper understanding of the Euroleague championship might identify new variables that significantly influence the analysis.
+The use of Generalized Additive Models (GAM) could enhance the project's analytical capabilities by allowing for the inclusion of additional variables and functionalizing specific aspects. The code could also be functionalized a little bit more. We encountered difficulties as we had trouble creating loops for generating plots. Future work could explore player statistics and try to find what makes a player important for the team. Future work could use the available unused variables and create new ones. Additionally, individuals with a deeper understanding of the Euroleague championship might identify new variables that significantly influence the analysis. Finally, an attempt at creating a dashboard was made, but it resulted in errors and the compiling time was excessively long. We decided to abandon it but our attempt is available for someone to fix it, if they want.
+
+This project was also a good introduction to git and we learned how to work as a team on a programming project. While we all worked mostly on separate things (Alan on the individual statistics, Dylan on the ***CreationDataFrame*** and on making the initial plots later functionalized, Lirim on ***Ranking*** and ***Functions***), we commited our work each day, worked together and helped each other to solve any problem encountered.
